examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/Platform_Event_Log_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Manage the configuration for Platform Event Logging Service for multiple Platform Event types.</description>
    <label>Platform Event Log Configuration</label>
    <pluralLabel>Platorm Event Log Configurations</pluralLabel>
</CustomObject>