examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Enable_Full_Payload_Log__c.field-meta.xml
<CustomField>
    <fullName>Enable_Full_Payload_Log__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Platform Events may include sensitive information. By disabling this checkbox the log will not include the full Platform Event payload. Only the individual fields configured for logging will be available.</description>
    <inlineHelpText>Platform Events may include sensitive information. By disabling this checkbox the log will not include the full Platform Event payload. Only the individual fields configured for logging will be available.</inlineHelpText>
    <label>Enable Full Payload Log</label>
    <type>Checkbox</type>
</CustomField>