examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Enable_Log_Records__c.field-meta.xml
<CustomField>
    <fullName>Enable_Log_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disabled the generation of Platform Event Log records.</description>
    <inlineHelpText>Enable or disabled the generation of Platform Event Log records.</inlineHelpText>
    <label>Enable Log Records</label>
    <type>Checkbox</type>
</CustomField>