examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Field_Logs__c.field-meta.xml
<CustomField>
    <fullName>Field_Logs__c</fullName>
    <description>Comma separated list of Platform Event Field API names to be logged in Platform Event Field Log object on parent Platform Event Log record</description>
    <inlineHelpText>Comma separated list of Platform Event Field API names to be logged in Platform Event Field Log object on parent Platform Event Log record</inlineHelpText>
    <label>Field Logs</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>