examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Completely enable or disable the Platform Event Logging Service for this Platform Event Type</description>
    <inlineHelpText>Completely enable or disable the Platform Event Logging Service for this Platform Event Type</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>