examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Platform_Event_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Type_API_Name__c</fullName>
    <description>API Name of Platform Event Type</description>
    <inlineHelpText>API Name of Platform Event Type</inlineHelpText>
    <label>Platform Event Type API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>