examples/CustomMetadataBasedConfiguration/main/default/objects/Platform_Event_Log_Configuration__mdt/fields/Publishing_User_Field__c.field-meta.xml
<CustomField>
    <fullName>Publishing_User_Field__c</fullName>
    <description>Field path used to pull user id to set as the Platform_Event_Log__c.Publishing_User__c field. Defaults to CreatedById if not populated.</description>
    <inlineHelpText>Field path used to pull user id to set as the Platform_Event_Log__c.Publishing_User__c field. Defaults to CreatedById if not populated.</inlineHelpText>
    <label>Publishing User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>